--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,8 @@
     ]
   },
   "dependencies": {
+    "@nrich/notification-core": "*",
+    "@nrich/notification-mui": "*",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.1",
@@ -22,6 +24,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
