--- a/demo/package.json
+++ b/demo/package.json
@@ -14,17 +14,16 @@
     ]
   },
   "dependencies": {
-    "@nrich/notification-core": "*",
-    "@nrich/notification-mui": "*",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.1",
+    "@nrich/notification-core": "*",
+    "@nrich/notification-mui": "*",
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "http-proxy-middleware": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -38,6 +37,7 @@
     "typescript": "^4.7.2"
   },
   "private": true,
+  "proxy": "http://localhost:8080",
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
