Add general test setup to enable writing tests in seperate folder, to be able to execute each module tests from module dir and to use coverege

--- a/libs/notification/mui/tsconfig.json
+++ b/libs/notification/mui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../config/tsconfig.common.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDirs": ["src", "test"],
     "outDir": "dist",
     "baseUrl": ".",
     "declarationDir": "dist",
