--- a/libs/notification/core/tsconfig.json
+++ b/libs/notification/core/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../../config/tsconfig.common.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDirs": ["src", "test"],
     "outDir": "dist",
     "baseUrl": ".",
-    "declarationDir": "dist"
+    "declarationDir": "dist",
   },
   "include": [
     "src"
