--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "axios": "^0.27.2",
     "chalk": "^5.0.1",
     "esbuild": "^0.14.39",
     "esbuild-jest": "^0.5.0",
@@ -28,6 +29,7 @@
     "fs-extra": "^10.1.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "msw": "^0.42.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rollup": "^2.74.1",
@@ -36,7 +38,9 @@
     "rollup-plugin-esbuild": "^4.9.1",
     "syncpack": "^7.2.1",
     "typescript": "^4.7.2",
-    "yargs": "^17.5.1"
+    "ts-jest": "^28.0.4",
+    "yargs": "^17.5.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "private": true,
   "scripts": {
