--- a/demo/package.json
+++ b/demo/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.2",
     "@mui/material": "^5.8.1",
     "@nrich/notification-core": "*",
     "@nrich/notification-mui": "*",
+    "@nrich/form-configuration-core": "*",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
