--- a/libs/form-configuration/core/package.json
+++ b/libs/form-configuration/core/package.json
@@ -3,14 +3,14 @@
   "description": "Contains core utilities related to the nrich-form-configuration module",
   "version": "0.0.1",
   "dependencies": {
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.0.0-rc.1",
+    "yup": "^0.32.11"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "yup": "^0.32.11"
+    "react-dom": ">=16.8.0"
   },
   "typings": "dist/index.d.ts"
 }
