Pull request issues fix - tests // given fix, generating initialValues and form from yup schema

--- a/demo/package.json
+++ b/demo/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
