--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
     "syncpack": "^7.2.1",
-    "typescript": "^4.7.2",
     "ts-jest": "^28.0.4",
-    "yargs": "^17.5.1",
-    "whatwg-fetch": "^3.6.2"
+    "typescript": "^4.7.2",
+    "whatwg-fetch": "^3.6.2",
+    "yargs": "^17.5.1"
   },
   "private": true,
   "scripts": {
