--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@nrich/notification-mui",
   "description": "Contains the UI implementation of notifications for the MUI component library",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.esm.js",
   "peerDependencies": {
     "@mui/material": "^5.0.0",
     "@nrich/notification-core": "^0.0.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "typings": "dist/index.d.ts"
+  "typings": "dist/index.d.ts",
+  "files": ["dist"]
 }
