--- a/libs/notification/core/package.json
+++ b/libs/notification/core/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@nrich/notification-core",
   "description": "Contains core utilities related to the nrich-notification module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "zustand": "^4.0.0-rc.1"
   },
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.esm.js",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "typings": "dist/index.d.ts"
+  "typings": "dist/index.d.ts",
+  "files": ["dist"]
 }
