--- a/libs/form-configuration/core/package.json
+++ b/libs/form-configuration/core/package.json
@@ -3,8 +3,8 @@
   "description": "Contains core utilities related to the nrich-form-configuration module",
   "version": "0.0.3",
   "dependencies": {
-    "zustand": "^4.0.0-rc.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.1.4"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -13,5 +13,7 @@
     "react-dom": ">=16.8.0"
   },
   "typings": "dist/index.d.ts",
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
