--- a/libs/form-configuration/core/package.json
+++ b/libs/form-configuration/core/package.json
@@ -6,14 +6,29 @@
     "yup": "^0.32.11",
     "zustand": "^4.1.4"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.0",
+    "msw": "^0.48.1",
+    "tsup": "^6.5.0",
+    "whatwg-fetch": "^3.6.2"
+  },
+  "files": [
+    "dist/*"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ]
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "build": "tsup",
+    "clean": "rm -rf .turbo && rm -rf dist"
+  },
+  "types": "dist/index.d.ts"
 }
