--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -2,6 +2,16 @@
   "name": "@nrich/notification-mui",
   "description": "Contains the UI implementation of notifications for the MUI component library",
   "version": "0.0.3",
+  "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "tsup": "^6.5.0"
+  },
+  "files": [
+    "dist/*"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "peerDependencies": {
@@ -10,8 +20,12 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ]
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "build": "tsup",
+    "clean": "rm -rf .turbo && rm -rf dist"
+  },
+  "types": "dist/index.d.ts"
 }
