--- a/package.json
+++ b/package.json
@@ -1,21 +1,9 @@
 {
   "name": "nrich-demo-frontend",
   "devDependencies": {
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^28.1.0",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
-    "axios": "^1.1.3",
-    "chalk": "^5.0.1",
-    "esbuild": "^0.15.13",
-    "esbuild-jest": "^0.5.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -24,33 +12,23 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "esno": "^0.16.3",
-    "fast-glob": "^3.2.12",
-    "fs-extra": "^10.1.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
-    "msw": "^0.48.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "rollup": "^3.3.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
     "syncpack": "^7.2.1",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.2",
-    "whatwg-fetch": "^3.6.2",
-    "yargs": "^17.5.1"
+    "turbo": "^1.6.3",
+    "typescript": "^4.7.2"
   },
+  "packageManager": "yarn@3.2.4",
   "private": true,
   "scripts": {
-    "build": "esno scripts/cli/build",
-    "test": "jest",
-    "lint": "eslint . --ext .ts,.tsx"
+    "build": "turbo run build --filter=!demo",
+    "clean": "turbo run clean --filter=!demo",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest"
   },
   "workspaces": [
     "demo",
     "libs/**/*"
-  ],
-  "packageManager": "yarn@3.2.4"
+  ]
 }
