--- a/demo/package.json
+++ b/demo/package.json
@@ -38,6 +38,8 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "eslint": "^8.2.0",
+    "eslint-config-nrich": "*",
     "typescript": "^4.7.2"
   },
   "private": true,
@@ -46,6 +48,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "lint": "eslint . --ext .ts,.tsx",
+    "clean": "rm -rf .turbo && rm -rf build"
   }
 }
