--- a/libs/notification/core/package.json
+++ b/libs/notification/core/package.json
@@ -6,9 +6,16 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@croz/nrich-jest-config": "*",
+    "@croz/nrich-tsconfig": "*",
+    "@croz/nrich-tsup-config": "*",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
+    "@types/jest": "^28.1.0",
     "axios": "^1.1.3",
+    "eslint": "^8.2.0",
+    "eslint-config-nrich": "*",
+    "jest": "^28.1.0",
     "msw": "^0.48.1",
     "tsup": "^6.5.0",
     "whatwg-fetch": "^3.6.2"
@@ -27,7 +34,9 @@
   },
   "scripts": {
     "build": "tsup",
-    "clean": "rm -rf .turbo && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf dist",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest"
   },
   "types": "dist/index.d.ts"
 }
