--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -3,10 +3,17 @@
   "description": "Contains the UI implementation of notifications for the MUI component library",
   "version": "0.0.3",
   "devDependencies": {
+    "@croz/nrich-jest-config": "*",
+    "@croz/nrich-tsconfig": "*",
+    "@croz/nrich-tsup-config": "*",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.0",
+    "eslint": "^8.2.0",
+    "eslint-config-nrich": "*",
+    "jest": "^28.1.0",
     "tsup": "^6.5.0"
   },
   "files": [
@@ -25,7 +32,9 @@
   },
   "scripts": {
     "build": "tsup",
-    "clean": "rm -rf .turbo && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf dist",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest"
   },
   "types": "dist/index.d.ts"
 }
