--- a/package.json
+++ b/package.json
@@ -1,21 +1,7 @@
 {
   "name": "nrich-demo-frontend",
   "devDependencies": {
-    "@types/jest": "^28.1.0",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^26.4.6",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
     "syncpack": "^7.2.1",
-    "ts-jest": "^28.0.4",
     "turbo": "^1.6.3",
     "typescript": "^4.7.2"
   },
@@ -24,11 +10,12 @@
   "scripts": {
     "build": "turbo run build --filter=!demo",
     "clean": "turbo run clean --filter=!demo",
-    "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest"
+    "lint": "turbo run lint",
+    "test": "turbo run test --filter=!demo"
   },
   "workspaces": [
     "demo",
+    "config/**/*",
     "libs/**/*"
   ]
 }
