Rename modules to @croz scope, update README.md

--- a/libs/notification/core/package.json
+++ b/libs/notification/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nrich/notification-core",
+  "name": "@croz/nrich-notification-core",
   "description": "Contains core utilities related to the nrich-notification module",
   "version": "0.0.3",
   "dependencies": {
