--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nrich/notification-mui",
+  "name": "@croz/nrich-notification-mui",
   "description": "Contains the UI implementation of notifications for the MUI component library",
   "version": "0.0.3",
   "devDependencies": {
@@ -22,8 +22,8 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "peerDependencies": {
+    "@croz/nrich-notification-core": "^0.0.3",
     "@mui/material": "^5.0.0",
-    "@nrich/notification-core": "^0.0.3",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
