--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "turbo run build --filter=!demo",
     "clean": "turbo run clean",
     "lint": "turbo run lint",
-    "test": "turbo run test --filter=!demo",
+    "test": "turbo run test --filter=!demo"
   },
   "workspaces": [
     "demo",
