--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "nrich-demo-frontend",
+  "author": "CROZ",
   "devDependencies": {
-    "syncpack": "^7.2.1",
+    "syncpack": "^8.3.9",
     "turbo": "^1.6.3",
-    "typescript": "^4.7.2"
+    "typescript": "^4.8.4"
   },
+  "license": "Apache-2.0",
   "packageManager": "yarn@3.2.4",
   "private": true,
+  "repository": "croz-ltd/nrich-demo-frontend.git",
   "scripts": {
     "build": "turbo run build --filter=!demo",
     "clean": "turbo run clean",
