--- a/libs/notification/core/package.json
+++ b/libs/notification/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@croz/nrich-notification-core",
   "description": "Contains core utilities related to the nrich-notification module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "CROZ",
   "dependencies": {
     "zustand": "^4.1.4"
@@ -24,6 +24,14 @@
   "files": [
     "dist/*"
   ],
+  "keywords": [
+    "croz",
+    "nrich",
+    "nrich-notification",
+    "react",
+    "typescript",
+    "zustand"
+  ],
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -36,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/croz-ltd/nrich-demo-frontend.git",
+    "url": "https://github.com/croz-ltd/nrich-frontend.git",
     "directory": "libs/notification/core"
   },
   "scripts": {
