--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@croz/nrich-notification-mui",
   "description": "Contains the UI implementation of notifications for the MUI component library",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "CROZ",
   "devDependencies": {
     "@croz/nrich-jest-config": "*",
     "@croz/nrich-tsconfig": "*",
     "@croz/nrich-tsup-config": "*",
+    "@mui/material": "^5.0.0",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
