--- a/libs/form-configuration/core/package.json
+++ b/libs/form-configuration/core/package.json
@@ -19,6 +19,8 @@
     "eslint-config-nrich": "*",
     "jest": "^28.1.0",
     "msw": "^0.48.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "tsup": "^6.5.0",
     "whatwg-fetch": "^3.6.2"
   },
