--- a/libs/notification/mui/package.json
+++ b/libs/notification/mui/package.json
@@ -7,6 +7,8 @@
     "@croz/nrich-jest-config": "*",
     "@croz/nrich-tsconfig": "*",
     "@croz/nrich-tsup-config": "*",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.0.0",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +18,8 @@
     "eslint": "^8.2.0",
     "eslint-config-nrich": "*",
     "jest": "^28.1.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "tsup": "^6.5.0"
   },
   "files": [
