--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         node: [ lts/* ]
 
     runs-on: ${{ matrix.os }}
-    name: Build / OS ${{ matrix.os }} - Node ${{ matrix.node }}
+    name: OS ${{ matrix.os }} - Node ${{ matrix.node }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -41,8 +41,7 @@ jobs:
 
       - name: Generate HTML documentation from TSDoc
         if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
-        with:
-          arguments: yarn docs:generate
+        run: yarn docs:generate
 
       - name: Publish generated documentation to GitHub Pages
         if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
