--- a/libs/registry/mui/package.json
+++ b/libs/registry/mui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@croz/nrich-registry-mui",
   "description": "Contains the UI implementation of registry for the MUI component library",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "author": "CROZ",
   "bugs": "https://github.com/croz-ltd/nrich-frontend/issues",
   "devDependencies": {
@@ -10,6 +10,7 @@
     "@croz/nrich-tsup-config": "*",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -40,6 +41,7 @@
   "module": "dist/index.esm.js",
   "peerDependencies": {
     "@croz/nrich-registry-core": "^1.0.0",
+    "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
