--- a/libs/registry/core/package.json
+++ b/libs/registry/core/package.json
@@ -50,7 +50,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/croz-ltd/nrich-frontend.git",
-    "directory": "libs/form-configuration/core"
+    "directory": "libs/registry/core"
   },
   "scripts": {
     "build": "tsup",
