--- a/libs/registry/mui/package.json
+++ b/libs/registry/mui/package.json
@@ -39,7 +39,7 @@
   ],
   "license": "Apache-2.0",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.mjs",
   "peerDependencies": {
     "@croz/nrich-form-configuration-core": "*",
     "@croz/nrich-registry-core": "*",
