--- a/libs/form-configuration/core/package.json
+++ b/libs/form-configuration/core/package.json
@@ -5,7 +5,7 @@
   "author": "CROZ",
   "bugs": "https://github.com/croz-ltd/nrich-frontend/issues",
   "dependencies": {
-    "yup": "^0.32.11",
+    "yup": "^1.4.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
     "eslint": "^8.2.0",
     "eslint-config-nrich": "*",
     "jest": "^28.1.0",
+    "lodash": "^4.17.21",
     "msw": "^0.48.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
